--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<h1>My Portfolio</h1>
+<Doctype HTML>
+<html lang="en">
+<head>
+<title> Webpage Title </title>
+<h1> Aidan Shugrue's CS110 Work </h1>
+</head>
+<body> Chapter 01 </body><!DOCTYPE html>
+<html>
+<body>
+<p><a href="file:///C:/Users/as4045/OneDrive%20-%20CCSU/CS-110/Aidan-Shugrue-Homework/CH01/Lab01/Lab1.html">Lab 01</a></p>
+
+</body>
+<body>
+<p><a href="<p><a href="file:///C:/Users/as4045/OneDrive%20-%20CCSU/CS-110/Aidan-Shugrue-Homework/CH01/Lab01/Lab1.html"</a></p>Lab 02</a></p>
+</html>
+<nav> 
+<p>&nbsp; &#9733; &nbsp;</p> 
+</nav>
+<nav> 
+<p>&nbsp; &#9733; &nbsp;</p>
+</nav>
+<nav> 
+<p>&nbsp; &#9733; &nbsp;</p>
+</nav>
+</html>
