--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </body>
 <body>
 <p><a href="<p><a href="file:///C:/Users/as4045/OneDrive%20-%20CCSU/CS-110/Aidan-Shugrue-Homework/CH01/Lab01/Lab1.html"</a></p>Lab 02</a></p>
+</body>
 </html>
 <nav> 
 <p>&nbsp; &#9733; &nbsp;</p> 
